# eterio-api

./: .gitignore  Discovery.md  Dockerfile  README.md  Spacefile  alcopedia-14413-firebase-adminsdk-zanl0-a158742791.json  main.py  pyproject.toml  requirements.txt
bottles/: models.py  routes.py
categories/: models.py  routes.py
drinks/: models.py  routes.py  schemas.py
users/: auth.py  models.py  routes.py  schemas.py
